fjernet deprecated option, og legger til srvEia igjen om prøver kallet mot flr og ser om det går