@@ -54,7 +54,6 @@ applicationDefaultJvmArgs = [
         '-Djavax.net.ssl.trustStorePassword=${NAV_TRUSTSTORE_PASSWORD}',
         '-Djavax.net.ssl.trustStoreType=JKS',
         '-XX:+UnlockExperimentalVMOptions',
-        '-XX:+UseCGroupMemoryLimitForHeap',
         '-XX:+UseG1GC',
         '-XshowSettings:vm'
 ]
